--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+js/
+.vscode/
+geo-coordinates-parser/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,4 +132,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-js
+
